manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colorapp-backend
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: colorapp
    app.kubernetes.io/version: v2.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v2.0.0
  template:
    metadata:
      labels:
        app: backend
        version: v2.0.0
    spec:
      containers:
      - name: colorapp-backend
        #image: nginx
        image: quay.io/mariusdieckmann/colorapp-backend:v2.0.12
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
          - name: configvol
            mountPath: /config
      volumes:
        - name: configvol
          configMap:
            name: canarydemo
---
apiVersion: v1
kind: Service
metadata:
  name: colorapp-backend
spec:
  selector:
    app: backend
    version: v2.0.0
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
