manifests/backend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: colorapp-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: colorapp
    http:
      paths:
      - path: /
        backend:
          serviceName: colorapp-backend
          servicePort: 8000
