manifests/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: colorapp.ingress.rancher2.computational.bio
    http:
      paths:
      - path: /
        backend:
          serviceName: colorapp-frontend
          servicePort: 8000
